--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Install Playwright Browsers
-      run: npx playwright install-deps
+    - name: Install Playwright Browsers $ Deps
+      run: microsoft/playwright-github-action@v1
 
     - name: Run Playwright tests
       run: npx playwright test
