--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,16 +14,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Setup Node.js
+    - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 18
 
     - name: Install dependencies
-      run: npm install
+      run: npm ci
 
-    - name: Install Playwright Browsers $ Deps
-      run: microsoft/playwright-github-action@v1
+    - name: Install Playwright browsers and OS dependencies
+      uses: microsoft/playwright-github-action@v1
 
     - name: Run Playwright tests
       run: npx playwright test
