--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -23,7 +23,7 @@ jobs:
       run: npm ci
 
     - name: Install Playwright browsers and OS dependencies
-      uses: npx playwright install-deps
+      run: npx playwright install-deps
 
     - name: Run Playwright tests
       run: npx playwright test
