modified playwright yaml file

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,5 +25,8 @@ jobs:
     - name: Install Playwright browsers and OS dependencies
       run: npx playwright install-deps
 
+    - name: Install Playwright browsers
+      run: npx playwright install
+
     - name: Run Playwright tests
       run: npx playwright test
